unpackaged/main/default/objects/project_cloud__Total_Allocation__c/project_cloud__Total_Allocation__c.object-meta.xml
<CustomObject>
    <description>System object representing Total Allocations against a Project Task</description>
    <label>Total Allocation</label>
    <nameField>
        <displayFormat>TA-{0000000000}</displayFormat>
        <label>Total Allocation Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Total Allocations</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>