unpackaged/main/default/objects/project_cloud__Total_Allocation__c/fields/project_cloud__End__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__End__c</fullName>
    <description>The last end date for all the users allocations against this project task</description>
    <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
    <label>End</label>
    <type>Date</type>
</CustomField>