unpackaged/main/default/objects/project_cloud__Total_Allocation__c/fields/project_cloud__Hash__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hash__c</fullName>
    <description>Hash used by the triggers to identify each Total Allocation object</description>
    <formula>CASESAFEID(project_cloud__User__c) &amp; CASESAFEID(project_cloud__Project_Task__c)</formula>
    <label>Hash</label>
    <type>Text</type>
</CustomField>