unpackaged/main/default/objects/project_cloud__Total_Allocation__c/fields/project_cloud__Hours__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Hours__c</fullName>
    <defaultValue>0</defaultValue>
    <description>This is the total number of hours a user has been allocated to a task</description>
    <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
    <label>Hours</label>
    <precision>18</precision>
    <required>true</required>
    <scale>2</scale>
    <type>Number</type>
</CustomField>