unpackaged/main/default/objects/project_cloud__Total_Allocation__c/fields/project_cloud__Project_Task__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Project_Task__c</fullName>
    <description>Each User with allocations against a Project Task will have one total allocation object keeping a tally of the hours they have been allocated to the task</description>
    <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
    <label>Project Task</label>
    <referenceTo>project_cloud__Project_Task__c</referenceTo>
    <relationshipLabel>Total Allocations</relationshipLabel>
    <relationshipName>Total_Allocations</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
    <writeRequiresMasterRead>true</writeRequiresMasterRead>
</CustomField>