unpackaged/main/default/objects/project_cloud__Total_Allocation__c/fields/project_cloud__Subscribed__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__Subscribed__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Does the user have a subscription to the Project Task? The Subscribed Enum is then rolled up so a count of subscriptions exists on the Project Task</description>
    <label>Subscribed</label>
    <type>Checkbox</type>
</CustomField>