unpackaged/main/default/objects/project_cloud__Total_Allocation__c/fields/project_cloud__User__c.field-meta.xml
<CustomField>
    <fullName>project_cloud__User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Who does this Total Allocation belong to?</description>
    <inlineHelpText>This is a system object and should never be visible.</inlineHelpText>
    <label>User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Total_Allocations</relationshipName>
    <type>Lookup</type>
</CustomField>