unpackaged/main/default/objects/project_cloud__Total_Allocation__c/validationRules/project_cloud__User_Is_Read_Only.validationRule-meta.xml
<ValidationRule>
    <fullName>project_cloud__User_Is_Read_Only</fullName>
    <active>true</active>
    <description>Once set the user lookup is read only.</description>
    <errorConditionFormula>ISBLANK(project_cloud__User__c) || ISCHANGED(project_cloud__User__c)</errorConditionFormula>
    <errorDisplayField>project_cloud__User__c</errorDisplayField>
    <errorMessage>The User field is compulsory and once set read only</errorMessage>
</ValidationRule>